First version supposed to be functional of the system for Ant System to give a solution to the Travel Salesman Problem